--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </h1>
 
           <p class="hero-description">
-            이름처럼 크고 넓은 시야로 빛나는 디자인을 하는 신입디자이너 김태경입니다.
+            이름처럼 크고 넓은 시야로 빛나는 디자인을 하다.
           </p>
           <div><a class="about-link"
               href="https://drive.google.com/file/d/1bGri3AvBZ4cp6xFF3QVkBScQT1ID0cFW/view?usp=sharing"
